<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
    android:id="@+id/bg-register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_gravity="top"
    android:contentDescription="@string/teste"
    android:scaleType="centerCrop"
    android:src="@mipmap/bg4" />

    <ImageView
        android:id="@+id/bgBlackRegister"
        android:layout_width="379dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:alpha="0.6"
        android:contentDescription="@string/teste"
        android:src="@android:color/background_dark"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagePerfil"
                android:layout_width="130dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:src="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePerfil" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:src="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edName" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:src="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edEmail" />

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/phone_input"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:inputType="date"
                android:gravity="center"
                android:typeface="monospace"
                android:hint="@string/datnascimento"
                android:background="@drawable/edit_text_style"
                android:textColorHint="@android:color/darker_gray"
                mask:mask="##/##/####"
                mask:keep_hint="false" />

            <RadioGroup
                android:id="@+id/sexo"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <RadioButton
                    android:id="@+id/rbMasc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/masculino"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rbFem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feminino"
                    android:textColor="@android:color/background_dark"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/edWeight"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/peso"
                android:inputType="numberDecimal"
                android:src="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edDate" />

            <EditText
                android:id="@+id/edHeight"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/altura"
                android:inputType="numberDecimal"
                android:src="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edWeight" />

            <Button
                android:id="@+id/btSignup"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/inscrever_se" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>