<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:textAlignment="center" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="50dp">

            <TextView

                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10px"
                android:text="Só mais um passo para começar a utilizar o aplicativo, responda estas perguntas para receber sugestões de exercicios"
                android:textAlignment="center" />

            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10px"
                android:text="@string/texto2"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/item_0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/item_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/item_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10px"
                android:text="@string/item_3" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10px"
                android:text="@string/atividade_fisica_d"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/d0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton
                    android:id="@+id/d1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/d2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/d3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:buttonTint="@android:color/darker_gray"/>
            </RadioGroup>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10px"
                android:text="@string/atividade_fisica_e"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/e0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/e1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/e2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/e3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:buttonTint="@android:color/darker_gray"/>
            </RadioGroup>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10px"
                android:text="@string/atividade_fisica_f"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton

                    android:id="@+id/f0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/f1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/f2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:buttonTint="@android:color/darker_gray"/>

                <RadioButton

                    android:id="@+id/f3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3"
                    android:buttonTint="@android:color/darker_gray"/>
            </RadioGroup>

            <Button
                android:id="@+id/btSavePartial"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/salvar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
