<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/tvExerciciosDone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/menu_text_style"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/hist_rico_de_exercicios"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPerfilEstiloVida"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/menu_text_style"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/perfil_do_estilo_de_vida"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <!--<TextView-->
        <!--android:id="@+id/tvConta"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginBottom="1dp"-->
        <!--android:background="@drawable/menu_text_style"-->
        <!--android:text="@string/conta"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingStart="10dp"-->
        <!--tools:ignore="RtlSymmetry"-->
        <!--android:textColor="@color/textColorPrimary"-->
        <!--android:textSize="16sp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/tvAjuda"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginBottom="1dp"-->
        <!--android:background="@drawable/menu_text_style"-->
        <!--android:text="@string/ajuda"-->
        <!--android:gravity="center_vertical"-->
        <!--android:paddingStart="10dp"-->
        <!--tools:ignore="RtlSymmetry"-->
        <!--android:textColor="@color/textColorPrimary"-->
        <!--android:textSize="16sp"/>-->

    <TextView
        android:id="@+id/tvSair"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/menu_text_style"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/sair"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:src="@mipmap/logo" />-->
</LinearLayout>